tests/baselines/reference/superCallsInConstructor.errors.txt
superCallsInConstructor.ts(12,9): error TS1101: 'with' statements are not allowed in strict mode.
superCallsInConstructor.ts(12,9): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


==== superCallsInConstructor.ts (2 errors) ====
    class C {
        foo() {}
        bar() {}
    }
    
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
            with(new C()) {
            ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
            ~~~~~~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
                foo();
                super();
                bar();
            }
    
            try {} catch(e) { super(); }
        }
    }